--- a/app/css/about.scss
+++ b/app/css/about.scss
@@ -2,7 +2,4 @@
 
 @import 'components/navigation';
 @import 'components/grid-items';
-
-body {
-  color: blue;
-}
+@import 'components/grid-items-lines';
