--- a/app/css/components/_grid-items.scss
+++ b/app/css/components/_grid-items.scss
@@ -46,8 +46,7 @@
       @include grid-item-columns($grid-item-columns);
     }
 
-    @for $i from 1 through length($grid-item-colors) {
-// assign colors from $grid-item-colors list
+    @for $i from 1 through length($grid-item-colors) { // assign colors from $grid-item-colors list
       &:nth-child(#{$i}) {
         $background-from-list: nth($grid-item-colors, $i);
         background-color: $background-from-list;
