--- a/app/css/global/_vendor.scss
+++ b/app/css/global/_vendor.scss
@@ -1,4 +1,5 @@
-@import "../../../bower_components/normalize-css/normalize.css";
+@import "normalize";
+
 // bower:scss
 @import "bower_components/bourbon/app/assets/stylesheets/_bourbon.scss";
 @import "bower_components/neat/app/assets/stylesheets/_neat.scss";
