--- a/app/styles/components/_grid-items.scss
+++ b/app/styles/components/_grid-items.scss
@@ -98,7 +98,7 @@
   }
 
   .grid-item-image {
-    background: url("https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png");
+    background: url("../images/mountains.png");
     background-color: $grid-item-background;
     background-position: top;
     background-repeat: no-repeat;
