--- a/app/styles/global/_vendor.scss
+++ b/app/styles/global/_vendor.scss
@@ -1,4 +1,2 @@
-// bower:scss
-@import "bower_components/bourbon/app/assets/stylesheets/_bourbon.scss";
-@import "bower_components/neat/app/assets/stylesheets/_neat.scss";
-// endbower
+@import 'bower_components/bourbon/app/assets/stylesheets/_bourbon.scss';
+@import 'bower_components/neat/app/assets/stylesheets/_neat.scss';
