--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,4 +1,5 @@
 @import './_normalize.css';
+@import './_app.css';
 /*! HTML5 Boilerplate v7.2.0 | MIT License | https://html5boilerplate.com/ */
 
 /* main.css 2.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
